# mc-pricing-risk

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.yaml
benchmarks/: benchmark_simulation.cpp
cmake/: CompilerOptions.cmake  Sanitizers.cmake  Warnings.cmake
config/: config.yaml  example.yaml
docs/: architecture.md  config.md  design-decisions.md  performance.md  profiling.md
include/mc/: config_loader.hpp  factory.hpp
include/mc/core/: Path.hpp  path.hpp
include/mc/model/: GBM.hpp  Model.hpp  gbm.hpp  heston.hpp  model.hpp
include/mc/payoff/: Payoff.hpp  asian.hpp  european.hpp  payoff.hpp
include/mc/randomness/: Rng.hpp  StdNormalRng.hpp  box_muller.hpp  inverse_normal_cdf.hpp  mt19937.hpp  normal_rng.hpp  sobol.hpp  stdnormalrng.hpp
include/mc/simulation/: Configuration.hpp  Simulation.hpp  configuration.hpp
profiling/: build_profile.sh  flamegraph.sh  lima.yaml  perf_stat.sh
profiling/traces/: path_latency.bt  rng_hotspot.bt  simulation_latency.bt
scripts/: plot_results.py  run_perf.sh
src/: config_loader.cpp  factory.cpp  main.cpp
src/model/: gbm.cpp  heston.cpp
src/payoff/: asian.cpp  european.cpp
src/randomness/: mt19937.cpp  sobol.cpp  stdnormalrng.cpp
src/simulation/: simulation.cpp
tests/: test_mc.cpp
